--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             
             <div class="chapters-grid">
                 <!-- Capítulo 1 - Introdução à Programação -->
-                <div class="chapter-card bimestre3">
+                <a href="introducao-programacao-aula.html" class="chapter-card bimestre3">
                     <div class="chapter-number">1</div>
                     <h2 class="chapter-title">🧠 Introdução à Programação e Algoritmos</h2>
                     <p class="chapter-description">
@@ -466,10 +466,10 @@
                         <span class="topic-tag">Pseudocódigo</span>
                     </div>
                     <div class="chapter-status">
-                        <span class="status-badge status-coming-soon">🚧 Em Breve</span>
+                        <span class="status-badge status-available">✅ Disponível</span>
                         <span class="chapter-icon">🧠</span>
                     </div>
-                </div>
+                </a>
 
                 <!-- Capítulo 2 - Primeiros Passos com Python -->
                 <div class="chapter-card bimestre3">
