--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                 </div>
 
                 <!-- Capítulo 3 - Variáveis e Tipos de Dados -->
-                <div class="chapter-card bimestre3">
+                <a href="variaveis-tipos-dados-aula.html" class="chapter-card bimestre3">
                     <div class="chapter-number">3</div>
                     <h2 class="chapter-title">📦 Variáveis e Tipos de Dados</h2>
                     <p class="chapter-description">
@@ -510,10 +510,10 @@
                         <span class="topic-tag">input() e conversões</span>
                     </div>
                     <div class="chapter-status">
-                        <span class="status-badge status-coming-soon">🚧 Em Breve</span>
+                        <span class="status-badge status-available">✅ Disponível</span>
                         <span class="chapter-icon">📦</span>
                     </div>
-                </div>
+                </a>
 
                 <!-- Capítulo 4 - Operadores e Expressões -->
                 <div class="chapter-card bimestre3">
